Feature Add: Input Suggestions

--- a/index.css
+++ b/index.css
@@ -1,266 +1,330 @@
-*{
-    font-family: sans-serif;
+* {
+  font-family: sans-serif;
 }
 
-html, body{
-    height: 100%;
-    width: 100%;
-    padding: 0px;
-    margin: 0px;
+html,
+body {
+  height: 100%;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
 
-    background-color: rebeccapurple;
+  background-color: rebeccapurple;
 }
 
-svg{
-    fill :aliceblue;
+svg {
+  min-width: 24px;
 
-    min-width: 24px;
+  fill: aliceblue;
 }
 
-.sustube{
-    height: 100%;
-    width: 100%;
-    background-color: midnightblue;
+/* Body Layout */
 
-    display: grid;
-    grid-template-columns: 100px 95%;
-    grid-template-rows: 7% 70px 88%;
+.sustube {
+  height: 100%;
+  width: 100%;
 
-    overflow: hidden;
+  display: grid;
+  grid-template-columns: 100px 95%;
+  grid-template-rows: 7% 70px 88%;
+
+  overflow: hidden;
+
+  background-color: midnightblue;
 }
 
-.searchNav{
-    background-color: #000000;
-    grid-column: 1/-1;
-    grid-row: 1/1;
+/* Search Nav */
 
-    display: flex;
-    flex-direction: row;
-    align-items: center; 
+.searchNav {
+  grid-column: 1/-1;
+  grid-row: 1/1;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  background-color: #000000;
 }
 
 .searchNav > div {
-    margin: 10px;
+  margin: 10px;
 }
 
-.searchBar{
-    align-items: center;
-    flex: 1;
-
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: center;
+.searchBar {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
 
 .searchBar > div {
-    margin: 5px;
+  margin: 5px;
 }
 
-.user{
-    min-width: 30px;
-    min-height: 30px;
-    background-color: blueviolet;
+.user {
+  min-width: 30px;
+  min-height: 30px;
 
-    border-radius: 50px;
+  background-color: blueviolet;
+
+  border-radius: 50px;
 }
 
-.homeIcon{
-    max-height: 100px;
-    max-width: 100px;
-
-    min-width: 100px;
+.homeIcon {
+  max-height: 100px;
+  max-width: 100px;
+  min-width: 100px;
 }
 
 .homeIcon > .homeIconSVG {
-    min-height: 100%;
-    min-width: 100%;
+  min-height: 100%;
+  min-width: 100%;
 }
 
+/* Search Box */
 
-.searchBox{
-    min-width: 500px;
-    min-height: 30px;
+.searchBox {
+  min-width: 500px;
+  min-height: 30px;
+  width: 50%;
+  height: 100%;
 
-    width: 50%;
-    height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 50px;
 
-    background-color: hsl(0, 0%, 18.82%);
-
-    display: grid;
-    grid-template-columns: 1fr 50px;
-
-    border-radius: 50px;
-
-    border: 2px solid hsl(0, 0%, 18.82%);
+  background-color: hsl(0, 0%, 18.82%);
+  border: 2px solid hsl(0, 0%, 18.82%);
+  border-radius: 50px;
 }
 
-.searchText{
-    border-radius: 50px 0px 0px 50px;
-    background-color: #000000;
-    color: aliceblue;
+.searchText {
+  border-radius: 50px 0px 0px 50px;
+  background-color: #000000;
+  color: aliceblue;
 
-    vertical-align: middle;
+  vertical-align: middle;
 
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
-.searchInput{
-    align-items: center;
-    background-color: #000000;
+#searchInput {
+  align-items: center;
+  background-color: #000000;
 
-    color: aliceblue;
-    
-    padding-left: 10px;
-    width: 100%;
-    border-radius: 50px 0px 0px 50px;
-    border: 0px;
+  color: aliceblue;
+
+  padding-left: 10px;
+  width: 100%;
+  border-radius: 50px 0px 0px 50px;
+  border: 0px;
 }
 
-.searchButton{
-    max-height: 30px;
-    max-width: 30px;
+.searchButton {
+  max-height: 30px;
+  max-width: 30px;
 
-    border-left: 2px solid hsl(0, 0%, 18.82%);
+  border-left: 2px solid hsl(0, 0%, 18.82%);
 }
 
-.searchButton > svg{
-    margin-left: 10px;
+.searchButton > svg {
+  margin-left: 10px;
 }
 
-.library-nav{
-    background-color: #000000;
-    grid-column: 1/1;
-    grid-row: 2/-1;
+/* Input Suggestions */
 
-    display: flex;
-    flex-direction: column;
-    /* grid-template-columns: 1fr; */
-    overflow: scroll;
+#inputSuggestions {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  position: fixed;
+  top: 50px;
+
+  width: 100%;
 }
 
-.library{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    margin: 10px;
-
-    margin-top: 30px;
-
-    color: whitesmoke;
-
-    /* background-color: darkgoldenrod; */
+#inputSuggestions > div {
+  margin: 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
-.library > svg{
-    max-width: 34px;
-    max-height: 34px;
+#inputSuggestions > .searchBar > div {
+  margin: 0px;
+}
+
+.resultSpaceOccupier {
+  min-width: 10%;
+  max-height: 0px;
+}
+
+.resultBox {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+
+  min-width: 500px;
+  min-height: 30px;
+  width: 40%;
+  height: 100%;
+
+  margin-right: 100px;
+  margin-left: 10px;
+
+  background-color: hsl(0, 0%, 18.82%);
+  color: aliceblue;
+  border: 2px solid hsl(0, 0%, 18.82%);
+  border-radius: 10px;
+}
+
+.resultBox > div {
+  margin-right: 10%;
+}
+
+.resultList {
+  display: grid;
+  grid-template-columns: 0fr 1fr;
+}
+
+.resultList > .resultIcon {
+  width: 25px;
+  margin: 5px;
+}
+
+.resultList > .resultText {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+}
+
+.inputSuggestionHidden {
+  visibility: hidden;
+}
+
+/* Library */
+
+.libraryNav {
+  grid-column: 1/1;
+  grid-row: 2/-1;
+
+  display: flex;
+  flex-direction: column;
+
+  overflow: scroll;
+
+  background-color: #000000;
+}
+
+.library {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  margin: 10px;
+  margin-top: 30px;
+
+  color: whitesmoke;
+}
+
+.library > svg {
+  max-width: 34px;
+  max-height: 34px;
 }
 
 .library > div {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
-.suggestionNav{
-    background-color: #000000;
-    grid-column: 2/-1;
-    grid-row: 2/2;
+/* Suggestions */
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.suggestionNav {
+  grid-column: 2/-1;
+  grid-row: 2/2;
 
-    overflow: scroll;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  overflow: scroll;
+  flex-wrap: wrap;
+
+  background-color: #000000;
 }
 
 .suggestionNav::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; /* make scrollbar transparent */
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
 }
 
-.suggestion{
-    /* min-width: 100px; */
-    min-height: 30px;
-    
-    margin: 15px;
+.suggestion {
+  text-align: center;
+  text-justify: auto;
 
-    border-radius: 10px;
+  min-height: 30px;
+  resize: none;
 
-    background-color: #383535;
+  margin: 15px;
+  padding: 10px;
+  padding-bottom: 0px;
+  border-radius: 10px;
 
-    color: aliceblue;
-
-    resize: none;
-
-    text-align: center;
-    text-justify: auto;
-
-    padding: 10px;
-    padding-bottom: 0px;
+  background-color: #383535;
+  color: aliceblue;
 }
 
-.videoBox{
-    background-color: #000000;
-    /* grid-column: 2/-1;
-    grid-row: 3/-1; */
+/* Videos */
 
-    display: flex;
-    flex-direction: row;
-    /* grid-template-columns: 1fr 1fr 1fr; */
+.videoBox {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  overflow: scroll;
 
-    flex-wrap: wrap;
-
-    align-items: center;
-
-    overflow: scroll;
+  background-color: #000000;
 }
 
-.video{
+.video {
+  font-family: sans-serif;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
 
-    font-family: sans-serif;
-    /* width: 90%; */
-    /* height: 400px; */
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr ;
-    
-    color: white;
+  margin: 2%;
+  margin-top: 1%;
 
-    margin: 2%;
-    margin-top: 1%;
-
-    background-color: black;
+  color: white;
+  background-color: black;
 }
 
 .video > img {
-    width: 350px;
-    border-radius: 10px;
+  width: 350px;
+  border-radius: 10px;
 }
 
-.videoTitle{
-    display: grid;
-    grid-template-columns: 50px 1fr;
+.videoTitle {
+  display: grid;
+  grid-template-columns: 50px 1fr;
 
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
-.videoText{
-    font-size: 20px;
-    font-weight: 800;
+.videoText {
+  font-size: 20px;
+  font-weight: 800;
 }
 
-.videoIcon{
-    background-color: aquamarine;
-    width: 40px;
-    height: 40px;
-    
-    border-radius: 50px;
+.videoIcon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  background-color: aquamarine;
 }
 
-.videoDetails{
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+.videoDetails {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
 }
